--- a/.firebaserc
+++ b/.firebaserc
@@ -9,6 +9,13 @@
           "dropshipping-dev"
         ]
       }
+    },
+    "drop-beeseller": {
+      "hosting": {
+        "prod": [
+          "drop-beeseller"
+        ]
+      }
     }
   },
   "etags": {}
