--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,13 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+      {
+        "name": "Launch Edge",
+        "request": "launch",
+        "type": "msedge",
+        "url": "https://localhost:4200",
+        "webRoot": "${workspaceFolder}"
+      },
         {
             "name": "Launch Chrome",
             "request": "launch",
@@ -12,13 +19,13 @@
             "webRoot": "${workspaceFolder}"
         },
 
-        
+
         {
             "type": "pwa-chrome",
             "request": "launch",
             "name": "Launch Chrome against localhost",
             "url": "http://localhost:4200",
             "webRoot": "${workspaceFolder}"
-        }      
+        }
     ]
 }
